--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -92,8 +92,7 @@
     
     <!-- PagSeguro scripts -->
     <script src="Libraries/zepto.min.js"></script>
-    <script type="text/javascript" src=
-    "https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
+    <script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.directpayment.js"></script>
     <script src="Libraries/Javascript.min.js"></script>
 
   </body>
