--- a/templates/pedido_finalizado.html
+++ b/templates/pedido_finalizado.html
@@ -227,7 +227,7 @@ nav a{
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href=" ">Cardápio Digital<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Cardápio Digital<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="carrinho">Lista de Pedidos</a>
